fix: RSLang 47: fix select background visibility

--- a/rslang/src/components/wingets/game-sprint/SprintGame.scss
+++ b/rslang/src/components/wingets/game-sprint/SprintGame.scss
@@ -10,11 +10,11 @@
   padding: 30px;
 
   .level-select {
-    background-color: inherit;
-    color: $color-light;
+    color: black;
+    background-color: #8fd4e2;
+    opacity: 0.9;
     margin-bottom: 55px;
     padding: 0.75rem 2.5rem 0.75rem 1rem;
-    background: none;
     border: 1px solid $color-light;
     border-radius: $border-rounded;
   }
